--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "serve": "vite preview"
   },
   "devDependencies": {
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.6.2",
+    "sort-package-json": "^1.57.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6"
