--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
+    "format": "run-p format:*",
+    "format:prettier": "prettier --write \"src/**/*.{ts,tsx,css,scss}\"",
+    "format:package-json": "sort-package-json",
     "serve": "vite preview"
+  },
+  "dependencies": {
+    "solid-js": "^1.4.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
@@ -14,9 +20,6 @@
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
     "vite-plugin-solid": "^2.2.6"
-  },
-  "dependencies": {
-    "solid-js": "^1.4.2"
   },
   "volta": {
     "node": "18.3.0"
