--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
+    "sass": "^1.52.2",
     "sort-package-json": "^1.57.0",
     "typescript": "^4.6.4",
     "vite": "^2.9.9",
