--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "solid-js": "^1.4.2"
   },
   "devDependencies": {
+    "@csstools/postcss-oklab-function": "^1.1.0",
+    "autoprefixer": "^10.4.7",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.6.2",
     "sass": "^1.52.2",
