--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "colorjs.io": "^0.0.7",
+    "dayjs": "^1.11.3",
     "solid-js": "^1.4.2"
   },
   "devDependencies": {
